# gpu-watchman

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  release.yml
code/: README.md  go.mod
code/cmd/gpu-watchman/: main.go  (+1 more)
docs/: README.md  architecture.md  development.md  installation.md  troubleshooting.md
docs/exporter/: README.md
docs/features/: health.md  inference.md  ownership.md
docs/operations/: benchmark-comparison.md  comparison.md  deployment.md  history.md  rollout.md
docs/reference/: cli.md  config.md  report-schema.md
packaging/kubernetes/: daemonset.yaml
packaging/prometheus/: alerts.yaml
packaging/systemd/: gpu-watchman.service
scripts/: check-repository.sh  check-version.sh
src/: lib.rs  main.rs  security.rs
src/analysis/: health.rs  mod.rs  trend.rs
src/application/: mod.rs  monitor.rs
src/config/: io.rs  mod.rs  schema.rs  validation.rs
src/domain/: benchmark.rs  benchmark_comparison.rs  canary.rs  mod.rs  report.rs  runtime.rs
src/inference/: mod.rs  openai.rs  probe.rs
src/operations/: bundle.rs  canary.rs  compare.rs  doctor.rs  history.rs  mod.rs  report_input.rs  rollout.rs  runtime.rs  saturation.rs  saturation_compare.rs  workload.rs
src/planning/: artifact.rs  capacity.rs  mod.rs  model_config.rs
src/presentation/: benchmark.rs  benchmark_compare.rs  canary.rs  mod.rs  processes.rs  prometheus.rs  runtime.rs  server.rs  terminal.rs  text.rs
src/telemetry/: command.rs  host.rs  mod.rs  nvidia.rs  process.rs  runtime.rs
tests/: cli_e2e.rs
(+14 files in other folders)
